--- a/stack/bds_stack.h.in
+++ b/stack/bds_stack.h.in
@@ -1,9 +1,25 @@
-/** @file
- *  @brief Stack data structure module definitions
+/**
+ * @file
+ * @brief Stack data structure module definitions
  *
- *  @author Jason Graham <jgraha8@gmail.com>
+ * Copyright (C) 2017-2019 Jason Graham <jgraham@compukix.net>
+ *
+ * This file is part of libbds.
+ *
+ * libbds is free software: you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * libbds is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with libbds. If not, see
+ * <https://www.gnu.org/licenses/>.
  */
-
 #ifndef __BDS_STACK_H__
 #define __BDS_STACK_H__
 
