--- a/serialize/Makefile.am
+++ b/serialize/Makefile.am
@@ -2,13 +2,13 @@
 # The list of libraries we are building seperated by spaces.
 # The 'lib_' indicates that these build products will be installed
 # in the $(libdir) directory. For example /usr/lib
-noinst_LTLIBRARIES = libbdsserialize.la
+noinst_LTLIBRARIES = libbds_serialize.la
 
 pkginclude_HEADERS = bds_serialize.h
 
 AM_CFLAGS = -I${top_srcdir}
 
-libbdsserialize_la_SOURCES = serialize.c
+libbds_serialize_la_SOURCES = serialize.c
 
 check_PROGRAMS = test_serialize1 test_serialize2 test_serialize3
 test_serialize1_SOURCES = test_serialize1.c
