--- a/vector/Makefile.am
+++ b/vector/Makefile.am
@@ -2,13 +2,13 @@
 # The list of libraries we are building seperated by spaces.
 # The 'lib_' indicates that these build products will be installed
 # in the $(libdir) directory. For example /usr/lib
-noinst_LTLIBRARIES = libbdsvector.la
+noinst_LTLIBRARIES = libbds_vector.la
 
 pkginclude_HEADERS = bds_vector.h
 
 AM_CFLAGS = -I${top_srcdir}
 
-libbdsvector_la_SOURCES = vector.c
+libbds_vector_la_SOURCES = vector.c
 
 # check_PROGRAMS = test_vector
 # test_vector_SOURCES = test_vector.c
