Added missing dependencies for debian-stable build manifest

--- a/.builds/debian-stable.yml
+++ b/.builds/debian-stable.yml
@@ -1,6 +1,9 @@
 image: debian/stable
 packages:
   - build-essential
+  - automake
+  - autoconf
+  - libtool
 sources:
   - https://git.sr.ht/~jgraha8/libbds  
 environment:
